--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/PreteltJuan/dynamoDB_practica#readme",
   "dependencies": {
+    "aws-sdk": "^2.1137.0",
     "express": "^4.18.1"
   }
 }
